--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row justify-content-center">
     <div class="col">
       <h1>Middleman Boilerplate</h1>
+      <%= partial "partials/projects" %>
     </div>
   </div>
 </div>
