--- a/source/assets/stylesheets/components/_card.scss
+++ b/source/assets/stylesheets/components/_card.scss
@@ -5,13 +5,15 @@
   flex-direction: row;
 }
 
-.card img {
-  width: 100%;
-  object-fit: contain;
+.card {
+  padding: 1em;
+  text-align: center;
 }
 
-.images-project {
-  display: flex;
+.card img {
+  width: 100%;
+  height: 25vh;
+  object-fit: contain;
 }
 
 @media(max-width: 992px) {
