--- a/source/assets/stylesheets/components/_card.scss
+++ b/source/assets/stylesheets/components/_card.scss
@@ -2,17 +2,29 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
-  flex-direction: row;
 }
 
 .card {
-  padding: 1em;
-  text-align: center;
+  border: none;
+  background-color: $light-gray;
+}
+
+.card-title {
+  align-self: center;
+  margin: 0;
+}
+.card-info {
+  align-self: center;
+  margin-top: 8px;
+  padding: 8px;
+  background-color: rgba($ivory, .75);
+  border-radius: 2px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
 
 .card img {
   width: 100%;
-  height: 25vh;
+  height: 33vh;
   object-fit: contain;
 }
 
