--- a/source/assets/stylesheets/config/_colors.scss
+++ b/source/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,9 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+$blue-sapphire: #006E90;
+$ivory: #FFFFF2;
+$blue-purple: #B4ADEA;
+$english-violet: #5C415D;
+$raisin-black: #1A1B25;
