--- a/source/assets/stylesheets/components/_avatar.scss
+++ b/source/assets/stylesheets/components/_avatar.scss
@@ -3,8 +3,10 @@
   border-radius: 50%;
 }
 .avatar-large {
-  width: 56px;
-  border-radius: 50%;
+  width: 256px;
+  border-radius: 9.375rem;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+  border: white 16px solid;
 }
 .avatar-bordered {
   width: 40px;
