--- a/source/assets/stylesheets/components/_banner.scss
+++ b/source/assets/stylesheets/components/_banner.scss
@@ -1,3 +1,7 @@
 .banner {
   height: 50vh;
+  background-color: rgba($english-violet, .75);
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
