implement baseline avatar/banner

--- a/source/partials/_banner.html.erb
+++ b/source/partials/_banner.html.erb
@@ -1,5 +1,16 @@
 <div class="banner">
-  <div class="container">
-    <img src="../assets/images/avatar.jpg" alt="kyle_photo" class="avatar-large">
+  <div class="container d-flex">
+    <div class="card-avatar">
+      <img src="../assets/images/avatar.jpg" alt="kyle_photo">
+      <div class="card-avatar-infos">
+        <div>
+          <h3>Kyle Alexander Bailey</h3>
+          <h5>Full-Stack Developer</h5>
+        </div>
+        <div>
+          <p>Travel enthusiast and lover of the outdoors</p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
