--- a/source/assets/stylesheets/components/_avatar.scss
+++ b/source/assets/stylesheets/components/_avatar.scss
@@ -1,22 +1,27 @@
-.avatar {
-  width: 40px;
-  border-radius: 50%;
+.card-avatar {
+  height: 200px;
+  display: flex;
+  padding: 0px 8px;
+  img {
+    height: 190px;
+    border-radius: 9.375rem;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+    border: white 8px solid;
+    align-self: center;
+  }
 }
-.avatar-large {
-  width: 256px;
-  border-radius: 9.375rem;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
-  border: white 16px solid;
-}
-.avatar-bordered {
-  width: 40px;
-  border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
-}
-.avatar-square {
-  width: 40px;
-  border-radius: 0px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+
+.card-avatar-infos {
+  display: flex;
+  flex-direction: column;
+  padding-left: 8px;
+  h3 {
+    font-weight: 700;
+  }
+  div {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
