--- a/source/assets/stylesheets/components/_card.scss
+++ b/source/assets/stylesheets/components/_card.scss
@@ -1,19 +1,19 @@
 .cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: none;
   grid-gap: 16px;
 }
 
-.card {
+.card-project {
   border: none;
-  background-color: $light-gray;
+  background-color: rgba($light-gray, 0);
+  display: flex;
+  flex-direction: column;
 }
 
-.card-title {
+.card-project-title {
   align-self: center;
-  margin: 0;
 }
-.card-info {
+.card-project-info {
   align-self: center;
   margin-top: 8px;
   padding: 8px;
@@ -22,20 +22,20 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
 
-.card img {
+.card-project img {
   width: 100%;
   height: 33vh;
   object-fit: contain;
 }
 
-@media(max-width: 992px) {
-  .cards {
-    grid-template-columns: 1fr 1fr;
-  }
-}
+// @media(max-width: 992px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr;
+//   }
+// }
 
-@media(max-width: 768px) {
-  .cards {
-    grid-template-columns: 1fr;
-  }
-}
+// @media(max-width: 768px) {
+//   .cards {
+//     grid-template-columns: 1fr;
+//   }
+// }
