--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,8 +1,4 @@
 <%= partial "partials/banner" %>
-<div class="container mt-3">
-  <div class="row justify-content-center">
-    <div class="col">
-      <%= partial "partials/projects" %>
-    </div>
-  </div>
+<div class="container">
+  <%= partial "partials/projects" %>
 </div>
