fix spacing and padding on avatar

--- a/source/partials/_banner.html.erb
+++ b/source/partials/_banner.html.erb
@@ -1,13 +1,13 @@
 <div class="banner">
-  <div class="container d-flex">
-    <div class="card-avatar">
+  <div class="container d-flex justify-content-center">
+    <div class="avatar">
       <img src="../assets/images/avatar.jpg" alt="kyle_photo">
-      <div class="card-avatar-infos">
-        <div>
+      <div class="avatar-infos">
+        <div class="title">
           <h3>Kyle Alexander Bailey</h3>
           <h5>Full-Stack Developer</h5>
         </div>
-        <div>
+        <div class="description">
           <p>Travel enthusiast and lover of the outdoors</p>
         </div>
       </div>
