change banner, body, and img border coloring

--- a/source/assets/stylesheets/components/_avatar.scss
+++ b/source/assets/stylesheets/components/_avatar.scss
@@ -5,8 +5,7 @@
   img {
     height: 190px;
     border-radius: 9.375rem;
-    box-shadow: 0 1px 4px rgba(0,0,0,0.2);
-    border: white 8px solid;
+    border: $ivory 16px solid;
     align-self: center;
   }
 }
