--- a/source/assets/stylesheets/components/_banner.scss
+++ b/source/assets/stylesheets/components/_banner.scss
@@ -1,5 +1,5 @@
 .banner {
-  background-color: rgba($english-violet, .75);
+  background-color: $nyanza;
   height: 200px;
   padding-top: 100px;
 }
