--- a/source/assets/stylesheets/config/_colors.scss
+++ b/source/assets/stylesheets/config/_colors.scss
@@ -14,3 +14,5 @@ $ivory: #FFFFF2;
 $blue-purple: #B4ADEA;
 $english-violet: #5C415D;
 $raisin-black: #1A1B25;
+$nyanza: #E4FDE1;
+$blue-violet: #4E148C;
