--- a/source/assets/stylesheets/components/_avatar.scss
+++ b/source/assets/stylesheets/components/_avatar.scss
@@ -30,3 +30,18 @@
     padding-bottom: 25px;
   }
 }
+
+@media(max-width: 576px) {
+  .avatar {
+    height: 300px;
+    padding: 0;
+    display: block;
+    text-align: center;
+  }
+  .avatar img {
+    height: 300px
+  }
+  .avatar-infos {
+    padding-left: 0;
+  }
+}
