implement section banners

--- a/source/assets/stylesheets/config/_colors.scss
+++ b/source/assets/stylesheets/config/_colors.scss
@@ -16,3 +16,5 @@ $english-violet: #5C415D;
 $raisin-black: #1A1B25;
 $nyanza: #E4FDE1;
 $blue-violet: #4E148C;
+$cornflower-blue: #858AE3;
+$pastel-purple: #c1c4eb;
