--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,4 +1,2 @@
 <%= partial "partials/banner" %>
-<div class="container">
-  <%= partial "partials/projects" %>
-</div>
+<%= partial "partials/section" %>
