--- a/source/assets/stylesheets/components/_banner.scss
+++ b/source/assets/stylesheets/components/_banner.scss
@@ -4,12 +4,19 @@
   padding-top: 100px;
 }
 
-.banner-infos {
-  align-self: center;
+.title h2 {
+  font-size: 2.5rem;
+  display: inline-block;
+  padding-top: 200px;
+  padding-bottom: .25rem;
+  border-bottom: 4px $pastel-purple solid;
 }
 
 @media(max-width: 576px) {
   .banner {
     padding-top: 50px;
+  }
+  .title h2 {
+    padding-top: 400px;
   }
 }
