--- a/source/assets/stylesheets/components/_card.scss
+++ b/source/assets/stylesheets/components/_card.scss
@@ -1,41 +1,41 @@
-.cards {
-  display: none;
-  grid-gap: 16px;
-}
-
-.card-project {
-  border: none;
-  background-color: rgba($light-gray, 0);
-  display: flex;
-  flex-direction: column;
-}
-
-.card-project-title {
-  align-self: center;
-}
-.card-project-info {
-  align-self: center;
-  margin-top: 8px;
-  padding: 8px;
-  background-color: rgba($ivory, .75);
-  border-radius: 2px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
-}
-
-.card-project img {
-  width: 100%;
-  height: 33vh;
-  object-fit: contain;
-}
-
-// @media(max-width: 992px) {
-//   .cards {
-//     grid-template-columns: 1fr 1fr;
-//   }
+// .cards {
+//   display: none;
+//   grid-gap: 16px;
 // }
 
-// @media(max-width: 768px) {
-//   .cards {
-//     grid-template-columns: 1fr;
-//   }
+// .card-project {
+//   border: none;
+//   background-color: rgba($light-gray, 0);
+//   display: flex;
+//   flex-direction: column;
 // }
+
+// .card-project-title {
+//   align-self: center;
+// }
+// .card-project-info {
+//   align-self: center;
+//   margin-top: 8px;
+//   padding: 8px;
+//   background-color: rgba($ivory, .75);
+//   border-radius: 2px;
+//   box-shadow: 0 0 15px rgba(0,0,0,0.1);
+// }
+
+// .card-project img {
+//   width: 100%;
+//   height: 33vh;
+//   object-fit: contain;
+// }
+
+// // @media(max-width: 992px) {
+// //   .cards {
+// //     grid-template-columns: 1fr 1fr;
+// //   }
+// // }
+
+// // @media(max-width: 768px) {
+// //   .cards {
+// //     grid-template-columns: 1fr;
+// //   }
+// // }
