implement basic product card

--- a/source/assets/stylesheets/config/_colors.scss
+++ b/source/assets/stylesheets/config/_colors.scss
@@ -10,11 +10,16 @@ $gray: #0E0000;
 $light-gray: #F4F4F4;
 
 $blue-sapphire: #006E90;
-$ivory: #FFFFF2;
 $blue-purple: #B4ADEA;
 $english-violet: #5C415D;
 $raisin-black: #1A1B25;
-$nyanza: #E4FDE1;
 $blue-violet: #4E148C;
 $cornflower-blue: #858AE3;
+$lavender-blush: #FFE9F3;
+
+// Section title bottom border
 $pastel-purple: #c1c4eb;
+// Header color
+$nyanza: #E4FDE1;
+// Body background and avatar border
+$ivory: #FFFFF2;
