--- a/source/assets/stylesheets/components/_index.scss
+++ b/source/assets/stylesheets/components/_index.scss
@@ -1,5 +1,5 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "card";
+@import "project";
 @import "banner";
