--- a/source/partials/_section.html.erb
+++ b/source/partials/_section.html.erb
@@ -1,10 +1,8 @@
-<% data.sections.each do |section| %>
-  <div class="container">
-    <div class="title">
-      <h2><%= section.title %></h2>
-    </div>
-    <div class="description">
-      <p><%= section.description %></p>
-    </div>
+<div class="container">
+  <div class="title">
+    <h2><%= data.sections[0].title %></h2>
   </div>
-<% end %>
+  <div class="description">
+    <p><%= data.sections[0].description %></p>
+  </div>
+</div>
