implement flex-reverse on even project cards

--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -1,4 +1,4 @@
-<div class="container py-3 d-flex flex-column">
+<div class="container py-3 d-flex flex-column align-items-center">
   <% data.projects.each do |project| %>
     <div class="project py-3 d-flex">
       <div class="image d-flex align-items-center">
