--- a/source/assets/stylesheets/components/_project.scss
+++ b/source/assets/stylesheets/components/_project.scss
@@ -5,6 +5,17 @@
   padding-left: 164px;
 }
 
+.project:nth-child(even) {
+  flex-direction: row-reverse;
+  .image {
+    left: 0px;
+  }
+  .project-infos {
+    padding-right: 164px;
+    padding-left: 24px;
+  }
+}
+
 .project .image {
   position: relative;
   left: 150px;
@@ -14,4 +25,5 @@
 .project img {
   width: 300px;
   height: 350px;
+  object-fit: contain;
 }
