refactor to utilize middleman helpers

--- a/source/partials/_banner.html.erb
+++ b/source/partials/_banner.html.erb
@@ -1,7 +1,7 @@
 <div class="banner">
   <div class="container d-flex justify-content-center">
     <div class="avatar">
-      <img src="../assets/images/avatar.jpg" alt="kyle_photo">
+      <%= image_tag 'avatar.jpg', :alt => "Kyle photo" %>
       <div class="avatar-infos">
         <div class="title">
           <h3>Kyle Alexander Bailey</h3>
