--- a/source/assets/stylesheets/config/_colors.scss
+++ b/source/assets/stylesheets/config/_colors.scss
@@ -19,7 +19,7 @@ $lavender-blush: #FFE9F3;
 
 // Section title bottom border
 $pastel-purple: #c1c4eb;
-// Header color
+// Header and project info border color
 $nyanza: #E4FDE1;
 // Body background and avatar border
 $ivory: #FFFFF2;
