--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,5 @@
 <%= partial "partials/banner" %>
-<%= partial "partials/section" %>
-<%= partial "partials/projects" %>
+<div class="container page">
+  <%= partial "partials/section" %>
+  <%= partial "partials/projects" %>
+</div>
