--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -13,6 +13,10 @@
             <span><i class="<%= tag %>"></i></span>
           <% end %>
         </div>
+        <div class="project-buttons">
+          <button type="button" class="btn btn-primary">View the App</button>
+          <button type="button" class="btn btn-primary">Check the Code</button>
+        </div>
       </div>
     </div>
   <% end %>
