implement basic responsive page style

--- a/source/assets/stylesheets/config/_colors.scss
+++ b/source/assets/stylesheets/config/_colors.scss
@@ -17,9 +17,9 @@ $blue-violet: #4E148C;
 $cornflower-blue: #858AE3;
 $lavender-blush: #FFE9F3;
 
-// Section title bottom border
-$pastel-purple: #c1c4eb;
-// Header and project info border color
-$nyanza: #E4FDE1;
-// Body background and avatar border
+// Body background and avatar border. Bootstrap 'body-bg' color.
 $ivory: #FFFFF2;
+// Header and project info border color. Bootstrap 'primary' color.
+$nyanza: #E4FDE1;
+// Section title bottom border. Bootstrap 'secondary' color.
+$pastel-purple: #c1c4eb;
