--- a/source/assets/stylesheets/components/_project.scss
+++ b/source/assets/stylesheets/components/_project.scss
@@ -7,6 +7,9 @@
   height: 450px;
   padding-left: 164px;
   padding-right: 12px;
+  h4 {
+    font-size: 1rem;
+  }
 }
 
 .project:nth-child(even) {
@@ -31,4 +34,37 @@
   width: 300px;
   height: 350px;
   object-fit: contain;
+}
+
+@media(max-width: 1030px) {
+  .project, .project:nth-child(even) {
+    padding: 1rem 2rem;
+    border: 10px solid $nyanza;
+    flex-direction: column;
+
+    .project-infos {
+      border: none;
+      padding-left: 0;
+      padding-right: 0;
+      text-align: start;
+      height: 100%;
+
+      .title {
+        text-align: center;
+      }
+    }
+  }
+
+  .mt-3 {
+    margin-top: 11rem !important;
+  }
+
+  .project .image {
+    left: 0;
+    bottom: 200px;
+    margin-bottom: -200px;
+    margin-left: 0;
+    justify-content: center;
+  }
+
 }
