--- a/source/assets/stylesheets/components/_section.scss
+++ b/source/assets/stylesheets/components/_section.scss
@@ -10,10 +10,13 @@
 
 .section.about {
   padding-top: 10rem;
+  .description {
+    padding-top: 1rem;
+  }
 }
 
 @media(max-width: 576px) {
-  .title h2 {
-    padding-top: 400px;
+  .section.about {
+    padding-top: 24rem;
   }
 }
