--- a/source/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/source/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,6 +12,7 @@ $font-size-base: 1rem;
 // Colors
 $body-color: $gray;
 $primary:    $nyanza;
+$secondary:  $pastel-purple;
 $success:    $green;
 $info:       $yellow;
 $danger:     $red;
