--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -1,21 +1,22 @@
-<div class="container py-3 d-flex flex-column">
+<div class="container my-3 d-flex flex-column">
   <% data.projects.each do |project| %>
-    <div class="project py-3 mb-5 d-flex">
+    <div class="project mt-3 mb-5 d-flex">
       <div class="image d-flex align-items-center">
         <%= image_tag project.image, :alt => "#{project.title} project photo" %>
       </div>
       <div class="project-infos d-flex flex-column justify-content-center">
         <h3><%= project.title %></h3>
+        <h4>Team Role: <%= project.role %></h4>
         <p><%= project.description %></p>
-        <p><%= project.tech || lorem.sentence %></p>
+        <p><%= project.tech %></p>
         <div class="project-tags">
           <% project.tags.each do |tag| %>
             <span><i class="<%= tag %>"></i></span>
           <% end %>
         </div>
-        <div class="project-buttons">
-          <button type="button" class="btn btn-primary">View the App</button>
-          <button type="button" class="btn btn-primary">Check the Code</button>
+        <div class="project-buttons mt-1">
+          <a href="<%= project.links[0] %>" target="_blank" class="btn btn-outline-secondary btn-sm">View the App</a>
+          <a href="<%= project.links[1] %>" target="_blank" class="btn btn-outline-secondary btn-sm">Check the Code</a>
         </div>
       </div>
     </div>
