--- a/source/partials/_banner.html.erb
+++ b/source/partials/_banner.html.erb
@@ -7,8 +7,9 @@
           <h1>Kyle Alexander Bailey</h1>
           <h5>Full-Stack Developer</h5>
         </div>
-        <div class="description">
-          <p>Travel enthusiast and lover of the outdoors</p>
+        <div class="description d-flex flex-row justify-content-start">
+          <a href="https://www.linkedin.com/in/kyle-alexander-bailey/" target="_blank" class="btn btn-outline-secondary btn-sm"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/2tonepantone" target="_blank" class="btn btn-outline-secondary btn-sm"><i class="fab fa-github-alt"></i></a>
         </div>
       </div>
     </div>
