--- a/source/assets/stylesheets/components/_project.scss
+++ b/source/assets/stylesheets/components/_project.scss
@@ -5,8 +5,8 @@
 .project-infos {
   border: 10px solid $nyanza;
   height: 450px;
-  padding-left: 164px;
-  padding-right: 12px;
+  padding-left: 11rem;
+  padding-right: .5rem;
   h4 {
     font-size: 1rem;
   }
@@ -18,8 +18,8 @@
     left: 0px;
   }
   .project-infos {
-    padding-right: 164px;
-    padding-left: 24px;
+    padding-right: 11rem;
+    padding-left: .5rem;
     text-align: end;
   }
 }
@@ -42,6 +42,10 @@
     border: 10px solid $nyanza;
     flex-direction: column;
 
+    img {
+        width: 100%;
+    }
+
     .project-infos {
       border: none;
       padding-left: 0;
@@ -62,9 +66,23 @@
   .project .image {
     left: 0;
     bottom: 200px;
-    margin-bottom: -200px;
+    margin-bottom: -184px;
     margin-left: 0;
     justify-content: center;
   }
+}
 
+@media(max-width: 375px) {
+  .mt-3 {
+    margin-top: 7rem !important;
+  }
+  .project .image {
+    margin-bottom: -250px;
+  }
+}
+
+@media(max-width: 320px) {
+  .mt-3 {
+    margin-top: 4rem !important;
+  }
 }
