--- a/source/assets/stylesheets/components/_section.scss
+++ b/source/assets/stylesheets/components/_section.scss
@@ -1,6 +1,9 @@
 .section {
-  padding-top: 2.5rem;
-  padding-bottom: .25rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  .title {
+    margin-bottom: 2rem;
+  }
   h2 {
     font-size: 2.5rem;
     display: inline-block;
@@ -9,14 +12,11 @@
 }
 
 .section.about {
-  padding-top: 10rem;
-  .description {
-    padding-top: 1rem;
-  }
+  margin-top: 12rem;
 }
 
-@media(max-width: 576px) {
+@media(max-width: 1030px) {
   .section.about {
-    padding-top: 24rem;
+    margin-top: 18rem;
   }
 }
