--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -1,4 +1,4 @@
-<div class="container my-3 d-flex flex-column">
+<div class="container d-flex flex-column">
   <% data.projects.each do |project| %>
     <div class="project mt-3 mb-5 d-flex">
       <div class="image d-flex align-items-center">
@@ -6,7 +6,7 @@
       </div>
       <div class="project-infos d-flex flex-column justify-content-center">
         <h3><%= project.title %></h3>
-        <h4>Team Role: <%= project.role %></h4>
+        <h4 class="mb-3">Team Role: <%= project.role %></h4>
         <p><%= project.description %></p>
         <p><%= project.tech %></p>
         <div class="project-tags">
@@ -15,8 +15,8 @@
           <% end %>
         </div>
         <div class="project-buttons mt-1">
-          <a href="<%= project.links[0] %>" target="_blank" class="btn btn-outline-secondary btn-sm">View the App</a>
-          <a href="<%= project.links[1] %>" target="_blank" class="btn btn-outline-secondary btn-sm">Check the Code</a>
+          <a href="<%= project.links[0] %>" target="_blank" class="btn btn-outline-secondary btn-sm"><i class="far fa-window-maximize"></i> App</a>
+          <a href="<%= project.links[1] %>" target="_blank" class="btn btn-outline-secondary btn-sm"><i class="far fa-file-code"></i> Code</a>
         </div>
       </div>
     </div>
