--- a/source/partials/_banner.html.erb
+++ b/source/partials/_banner.html.erb
@@ -5,11 +5,17 @@
       <div class="avatar-infos">
         <div class="title">
           <h1>Kyle Alexander Bailey</h1>
-          <h5>Full-Stack Developer</h5>
         </div>
-        <div class="description d-flex flex-row justify-content-start">
-          <a href="https://www.linkedin.com/in/kyle-alexander-bailey/" target="_blank" class="btn btn-outline-secondary btn-sm"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/2tonepantone" target="_blank" class="btn btn-outline-secondary btn-sm"><i class="fab fa-github-alt"></i></a>
+        <div class="description d-flex">
+          <h5>Full-Stack Developer</h5>
+          <div class="socials flex-row justify-content-start">
+            <a href="https://www.linkedin.com/in/kyle-alexander-bailey/" class="text-secondary mr-2" target="_blank">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/2tonepantone" class="text-secondary" target="_blank">
+              <i class="fab fa-github-alt"></i>
+            </div>
+          </a>
         </div>
       </div>
     </div>
