--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,9 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kyle Alexander Bailey</title>
-    <!-- Comment this out when meta tags configured -->
-    <%#= display_meta_tags %>
-    <%= favicon_tag 'favicon.ico' %>
+    <meta property="og:title" content="<%= data.meta_tags.title %>">
+    <meta property="og:project_name" content="<%= data.meta_tags.project_name %>">
+    <meta property="og:description" content="<%= data.meta_tags.description %>">
+    <meta property="og:image" content="<%= data.meta_tags.image %>">
+    <%= favicon_tag 'favicon.png' %>
     <%= stylesheet_link_tag "app" %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.13.0/devicon.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
