make buttons more readable

--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -15,8 +15,10 @@
           <% end %>
         </div>
         <div class="project-buttons mt-1">
-          <a href="<%= project.links[0] %>" target="_blank" class="btn btn-outline-secondary btn-sm"><i class="far fa-window-maximize"></i> App</a>
-          <a href="<%= project.links[1] %>" target="_blank" class="btn btn-outline-secondary btn-sm"><i class="far fa-file-code"></i> Code</a>
+          <a href="<%= project.links[0] %>" target="_blank" class="btn btn-secondary btn-sm">
+            <i class="far fa-window-maximize"></i> App</a>
+          <a href="<%= project.links[1] %>" target="_blank" class="btn btn-secondary btn-sm">
+            <i class="far fa-file-code"></i> Code</a>
         </div>
       </div>
     </div>
