feat(banner): add gitlab link

--- a/source/partials/_banner.html.erb
+++ b/source/partials/_banner.html.erb
@@ -9,13 +9,28 @@
         <div class="description d-flex">
           <h5>Full-Stack Developer</h5>
           <div class="socials flex-row justify-content-start">
-            <a href="https://www.linkedin.com/in/kyle-alexander-bailey/" class="text-secondary mr-2" target="_blank">
+            <a
+              href="https://gitlab.com/kylealexbailey"
+              class="text-secondary mr-2"
+              target="_blank"
+            >
+              <i class="fab fa-gitlab"></i>
+            </a>
+            <a
+              href="https://github.com/2tonepantone"
+              class="text-secondary mr-2"
+              target="_blank"
+            >
+              <i class="fab fa-github"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/kyle-alexander-bailey/"
+              class="text-secondary"
+              target="_blank"
+            >
               <i class="fab fa-linkedin"></i>
             </a>
-            <a href="https://github.com/2tonepantone" class="text-secondary" target="_blank">
-              <i class="fab fa-github-alt"></i>
-            </div>
-          </a>
+          </div>
         </div>
       </div>
     </div>
