feat(data): add link icons

--- a/source/partials/_professional_projects.html.erb
+++ b/source/partials/_professional_projects.html.erb
@@ -28,7 +28,7 @@
           target="_blank"
           class="btn btn-secondary btn-sm"
         >
-              <i class="far fa-window-maximize"></i> <%= link.title %></a
+              <i class="<%= link.icon %>"></i> <%= link.title %></a
         >
           <% end %>
         </div>
