feat: update meta tags

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,7 +7,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      
+
       gtag('config', 'G-ENKD1J6DE3');
     </script>
     <meta charset="utf-8">
@@ -16,7 +16,7 @@
     <!-- For Bootstrap responsiveness -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kyle Alexander Bailey</title>
+    <title>Kyle Alexander Bailey | Software Engineer</title>
     <%= display_meta_tags %>
     <%= favicon_tag 'favicon.png' %>
     <%= stylesheet_link_tag "app" %>
