feat: update job title to "Full-Stack Engineer"

--- a/source/partials/_banner.html.erb
+++ b/source/partials/_banner.html.erb
@@ -7,7 +7,7 @@
           <h1>Kyle Alexander Bailey</h1>
         </div>
         <div class="description d-flex">
-          <h5>Software Engineer</h5>
+          <h5>Full-Stack Engineer</h5>
           <div class="socials flex-row justify-content-start">
             <a
               href="https://gitlab.com/kylealexbailey"
