--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,7 +16,7 @@
     <!-- For Bootstrap responsiveness -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kyle Alexander Bailey | Software Engineer</title>
+    <title>Kyle Alexander Bailey | Full-Stack Engineer</title>
     <%= display_meta_tags %>
     <%= favicon_tag 'favicon.svg' %>
     <%= stylesheet_link_tag "app" %>
